Criando Interface Web

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -19,7 +19,6 @@
     --color-button-text: #FFFFFF;
     --color-box-base: #FFFFFF;
     --color-box-footer: #FAFAFC;
-  
   }
   
   * {
@@ -34,8 +33,28 @@
   
   body {
     background: var(--color-background);
-  }:root {
-    font-size: 60%;
+  }
 
+  #root { 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-} 
+  body,
+  input,
+  button,
+  textarea {
+      font: 500 1.6rem Poppins;
+  }
+
+  .container {
+      width: 90vw;
+      max-width: 700px;
+  }
+
+@media (min-width: 700px){
+    :root {
+        font-size: 62.5%;
+    }
+}
